--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -73,6 +75,13 @@ dependencies {
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
+
+    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta01'
+
+    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.11.0")
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.30"
+    implementation "com.squareup.moshi:moshi:1.11.0"
+    implementation "com.squareup.moshi:moshi-kotlin:1.11.0"
 
     testImplementation 'junit:junit:4.13.2'
 
